--- a/development/ui/components.mdx
+++ b/development/ui/components.mdx
@@ -1,11 +1,11 @@
 ---
 title: "React Native Reusables"
-description: "Explore and use the pre-built UI component library in BuildWithAI+"
+description: "Explore and use the pre-built UI component library in BuildWithAI"
 ---
 
 ## React Native Reusables
 
-BuildWithAI+ comes with an extensive collection of pre-built, customizable UI components designed to accelerate your development process. These components follow consistent styling patterns and are built with NativeWind for easy customization.
+BuildWithAI comes with an extensive collection of pre-built, customizable UI components designed to accelerate your development process. These components follow consistent styling patterns and are built with NativeWind for easy customization.
 
 ### Component Library Overview
 
