--- a/development/ui/mobbin.mdx
+++ b/development/ui/mobbin.mdx
@@ -1,11 +1,11 @@
 ---
 title: 'Mobbin Design Resources'
-description: 'Using Mobbin for UI design inspiration in your BuildWithAI+ application'
+description: 'Using Mobbin for UI design inspiration in your BuildWithAI application'
 ---
 
 # Mobbin Design Resources
 
-This guide explains how to use Mobbin as a design resource for your BuildWithAI+ application.
+This guide explains how to use Mobbin as a design resource for your BuildWithAI application.
 
 ## What is Mobbin?
 
