--- a/development/ui/nativewind.mdx
+++ b/development/ui/nativewind.mdx
@@ -5,7 +5,7 @@ description: "Learn how to use NativeWind for styling your React Native app"
 
 ## NativeWind Theming
 
-The BuildWithAI+ boilerplate uses [NativeWind](https://www.nativewind.dev/) as its styling solution, which brings the power and convenience of Tailwind CSS to React Native. This allows you to create beautiful, responsive UIs using the familiar Tailwind class-based approach.
+The BuildWithAI boilerplate uses [NativeWind](https://www.nativewind.dev/) as its styling solution, which brings the power and convenience of Tailwind CSS to React Native. This allows you to create beautiful, responsive UIs using the familiar Tailwind class-based approach.
 
 ### How Theming Works in the Boilerplate
 
@@ -204,7 +204,7 @@ function MyComponent() {
 
 ### Next Steps
 
-Now that you understand how theming works in the BuildWithAI+ boilerplate, you can:
+Now that you understand how theming works in the BuildWithAI boilerplate, you can:
 
 - Explore the [Components Library](/development/ui/components) to see available UI components
 - Learn about [Styling Conventions](/development/ui/styling-conventions) used in the boilerplate
