--- a/development/ui/styling-conventions.mdx
+++ b/development/ui/styling-conventions.mdx
@@ -1,15 +1,15 @@
 ---
 title: 'Styling Conventions'
-description: 'Best practices and conventions for styling in BuildWithAI+ applications'
+description: 'Best practices and conventions for styling in BuildWithAI applications'
 ---
 
 # Styling Conventions
 
-This guide outlines the styling conventions used in BuildWithAI+ applications.
+This guide outlines the styling conventions used in BuildWithAI applications.
 
 ## NativeWind Integration
 
-BuildWithAI+ uses NativeWind (Tailwind CSS for React Native) as the primary styling solution.
+BuildWithAI uses NativeWind (Tailwind CSS for React Native) as the primary styling solution.
 
 ## Organization
 
