--- a/features/ads/store-requirements.mdx
+++ b/features/ads/store-requirements.mdx
@@ -1,11 +1,11 @@
 ---
 title: 'Store Requirements for Ads'
-description: 'App store compliance requirements for implementing ads in your BuildWithAI+ application'
+description: 'App store compliance requirements for implementing ads in your BuildWithAI application'
 ---
 
 # Store Requirements for Ads
 
-This guide covers app store compliance requirements when implementing ads in your BuildWithAI+ application.
+This guide covers app store compliance requirements when implementing ads in your BuildWithAI application.
 
 ## App Store (iOS) Requirements
 
