--- a/features/analytics/posthog-setup.mdx
+++ b/features/analytics/posthog-setup.mdx
@@ -1,16 +1,16 @@
 ---
 title: 'PostHog Analytics Setup'
-description: 'Setting up PostHog analytics in your BuildWithAI+ application'
+description: 'Setting up PostHog analytics in your BuildWithAI application'
 ---
 
 # PostHog Analytics Setup
 
-This guide walks you through setting up PostHog analytics in your BuildWithAI+ application.
+This guide walks you through setting up PostHog analytics in your BuildWithAI application.
 
 ## Prerequisites
 
 - PostHog account
-- BuildWithAI+ application
+- BuildWithAI application
 
 ## Installation & Configuration
 
