--- a/features/auth/apple-auth.mdx
+++ b/features/auth/apple-auth.mdx
@@ -1,11 +1,7 @@
 ---
 title: "Apple Sign-In"
-description: "Setup Apple Sign-In for your BuildWithAI+ app"
+description: "Setup Apple Sign-In for your BuildWithAI app"
 ---
-
-# Apple Sign-In Setup
-
-This guide walks you through setting up Apple Sign-In for your BuildWithAI+ app using Supabase as the authentication provider.
 
 ## Prerequisites
 
