--- a/features/auth/social-auth.mdx
+++ b/features/auth/social-auth.mdx
@@ -3,10 +3,6 @@ title: "Social Authentication Setup"
 description: "Configure social authentication providers in your Supabase project"
 ---
 
-## Setting up Social Authentication
-
-Now that you have basic authentication working with Supabase, you can enhance your app by adding social authentication providers. This guide covers the general setup process for social authentication in your Supabase project.
-
 ### Prerequisites
 
 Before setting up social authentication:
@@ -19,24 +15,5 @@ Before setting up social authentication:
 
 The boilerplate comes pre-configured for the following social authentication providers:
 
-1. [Google Sign-In](/features/auth/google-auth)
-   - Most widely used
-   - Required for Android Play Store
-
-2. [Apple Sign-In](/features/auth/apple-auth)
-   - Required for iOS App Store
-   - Automatically enabled for iOS users
-
-### Next Steps
-
-Now that you have set up authentication with Supabase for Expo Go testing, you can test the authentication flow in the Expo Go environment. When you're ready to test on a real device with a development build, follow the [Development Build guide](/quickstart/development-build) which includes instructions for updating your Supabase URL configuration for your app scheme.
-
-After creating your development build, you can then configure additional social authentication providers:
-
-- [Google Sign-In Setup](/docs/auth/google-signin-guide)
-- [Apple Sign-In Setup](/features/auth/apple-auth)
-
-### Additional Resources
-
-- [Supabase Auth Documentation](https://supabase.com/docs/guides/auth)
-- [Supabase JavaScript Client Reference](https://supabase.com/docs/reference/javascript/)
+- [Google Sign-In](/features/auth/google-auth) - Available for **Android and iOS**
+- [Apple Sign-In](/features/auth/apple-auth) - Available for **iOS Only**
