--- a/features/customization/app-icons.mdx
+++ b/features/customization/app-icons.mdx
@@ -5,7 +5,7 @@ description: "Customize your app's visual identity with custom icons and splash 
 
 # App Icons & Splash Screens
 
-Customizing your app's icons and splash screens helps create a professional, branded experience for your users. This guide explains how to create and configure these assets for your BuildWithAI+ app.
+Customizing your app's icons and splash screens helps create a professional, branded experience for your users. This guide explains how to create and configure these assets for your BuildWithAI app.
 
 ## Asset Requirements
 
