--- a/features/push/setup.mdx
+++ b/features/push/setup.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Push Notifications Setup"
-description: "Configure push notifications for your BuildWithAI+ app on iOS and Android"
+description: "Configure push notifications for your BuildWithAI app on iOS and Android"
 ---
 
 import { Tabs, Tab } from 'nextra/components'
@@ -9,7 +9,7 @@ import { Tip, Info, Note } from 'nextra/components'
 
 # Push Notifications Setup
 
-The BuildWithAI+ boilerplate includes a comprehensive push notification system powered by Expo's notification services. This guide will walk you through the setup process for both iOS and Android platforms.
+The BuildWithAI boilerplate includes a comprehensive push notification system powered by Expo's notification services. This guide will walk you through the setup process for both iOS and Android platforms.
 
 ## Overview
 
@@ -24,7 +24,7 @@ The push notification system in the boilerplate handles:
 
 Before you begin, you'll need:
 
-- A BuildWithAI+ boilerplate project set up
+- A BuildWithAI boilerplate project set up
 - An Expo account (if you don't have one, [sign up here](https://expo.dev/signup))
 - Apple Developer account (for iOS push notifications)
 - Firebase project (for Android push notifications)
