--- a/quickstart/project-setup.mdx
+++ b/quickstart/project-setup.mdx
@@ -1,11 +1,11 @@
 ---
 title: "Project Setup"
-description: "Get your BuildWithAI+ project up and running in minutes"
+description: "Get your BuildWithAI project up and running in minutes"
 ---
 
 ## Project Setup
 
-This guide will walk you through the process of setting up your BuildWithAI+ project from scratch, from cloning the repository to configuring your development environment.
+This guide will walk you through the process of setting up your BuildWithAI project from scratch, from cloning the repository to configuring your development environment.
 
 ### Prerequisites
 
@@ -17,7 +17,7 @@ Before you begin, make sure you have the following installed:
 
 ### Step 1: Clone the Repository
 
-Clone the BuildWithAI+ repository from GitHub:
+Clone the BuildWithAI repository from GitHub:
 
 ```bash
 git clone https://github.com/buildwithai-plus/boilerplate.git your-app-name
@@ -44,7 +44,3 @@ cp .env.example .env
 <Info>
   You'll configure specific environment variables as you set up various features in the following guides.
 </Info>
-
-### Next
-
-After setting up your project, the next step in your development process is to set up authentication with Supabase. 
