--- a/quickstart/supabase-setup.mdx
+++ b/quickstart/supabase-setup.mdx
@@ -5,7 +5,7 @@ description: "Set up your Supabase project for authentication"
 
 ## Setting up Supabase
 
-The BuildWithAI+ boilerplate uses [Supabase](https://supabase.com/) for authentication and database. This guide will walk you through the initial setup.
+The BuildWithAI boilerplate uses [Supabase](https://supabase.com/) for authentication and database. This guide will walk you through the initial setup.
 
 ### Creating a Supabase Project
 
@@ -73,7 +73,3 @@ Let's verify the setup with a basic email/password test:
 6. **Click 'Allow'** when your browser prompts you to open your app
 
 If the authentication flow works successfully, you'll be automatically signed in.
-
-### What's Next
-
-Now that you have set up Supabase, you can proceed with configuring your app settings. Later, you can return to set up additional authentication methods like Google and Apple Sign-In in the Features section.
