--- a/index.mdx
+++ b/index.mdx
@@ -1,43 +1,34 @@
 ---
-title: BuildWithAI+ Boilerplate
+title: BuildWithAI Boilerplate
 description: "A comprehensive mobile app starter kit for React Native & Expo"
 ---
 
 <img
   className="block dark:hidden"
   src="/images/hero-light.png"
-  alt="BuildWithAI+ Boilerplate"
+  alt="BuildWithAI Boilerplate"
 />
 <img
   className="hidden dark:block"
   src="/images/hero-dark.png"
-  alt="BuildWithAI+ Boilerplate"
+  alt="BuildWithAI Boilerplate"
 />
 
-## Welcome to BuildWithAI+ Boilerplate
+## Welcome to BuildWithAI Boilerplate
 
-BuildWithAI+ is a production-ready starter kit for building mobile applications with React Native and Expo. It includes everything you need to get started quickly while maintaining best practices and a scalable architecture.
+BuildWithAI is a production-ready starter kit for building mobile applications with React Native and Expo. It includes everything you need to get started quickly while maintaining best practices and a scalable architecture.
 
-<CardGroup cols={2}>
-  <Card
-    title="What's Included"
-    icon="box-open"
-    href="/introduction/whats-included"
-  >
-    Explore all the features and integrations available out of the box
-  </Card>
-  <Card
-    title="Quick Start Guide"
-    icon="rocket"
-    href="/quickstart/project-setup"
-  >
-    Get up and running with your first mobile app in minutes
-  </Card>
-</CardGroup>
+<Card
+  title="Quick Start Guide"
+  icon="rocket"
+  href="/quickstart/project-setup"
+>
+  Get up and running with your first mobile app in minutes
+</Card>
 
 ## Key Features
 
-BuildWithAI+ provides a complete mobile app foundation with production-ready integrations.
+BuildWithAI provides a complete mobile app foundation with production-ready integrations.
 
 <CardGroup cols={3}>
   <Card
